--- a/layouts/partials/menu-footer.html
+++ b/layouts/partials/menu-footer.html
@@ -1,6 +1,9 @@
 <center>
     <!-- Place this tag where you want the button to render. -->
-    <a class="github-button" href="https://github.com/diambra/DIAMBRAenvironment/archive/refs/heads/main.zip" data-icon="octicon-cloud-download" aria-label="Download DIAMBRA Arena from GitHub">Download</a>
+    <!-- <a class="github-button" href="https://github.com/diambra/DIAMBRAenvironment" data-icon="octicon-cloud-download" aria-label="Clone DIAMBRA Arena from GitHub">Clone</a> -->
+
+    <!-- Place this tag where you want the button to render. -->
+    <a class="github-button" href="https://github.com/diambra/DIAMBRAenvironment/archive/refs/heads/main.zip" data-icon="octicon-download" aria-label="Download DIAMBRA Arena from GitHub">Download</a>
 
     <!-- Place this tag where you want the button to render. -->
     <a class="github-button" href="https://github.com/diambra/DIAMBRAenvironment" data-icon="octicon-star" data-show-count="true" aria-label="Star DIAMBRA Arena on GitHub">Star</a>
