--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -261,7 +261,8 @@ textarea:focus, input[type="email"]:focus, input[type="number"]:focus, input[typ
 #sidebar ul.topics ul ul {
     padding-bottom: 0;
 }
-#sidebar ul.topics li.parent ul, #sidebar ul.topics > li.active ul {
+/* #sidebar ul.topics li.parent ul, #sidebar ul.topics > li.active ul {  <- OLD VERSION ALL CHILDREN EXPANDED */
+#sidebar ul.topics li.parent > ul { /* <- NEW VERSION, ONLY DIRECT CHILDREN EXPANDED*/
     display: block;
 }
 #sidebar ul.topics > li > a {
