Added logo, favicon and updated colors

--- a/layouts/partials/logo.html
+++ b/layouts/partials/logo.html
@@ -1,5 +1,5 @@
 <a id="logo" href='{{ (cond (and (ne .Site.Params.landingPageURL nil) (.Site.IsMultiLingual)) .Site.Params.landingPageURL "/") }}'>
 
-<img src="https://diambra.artificialtwin.com/img/logo.png">
+<img src="/images/logo.png">
 
 </a>
