--- a/static/css/theme-diambra.css
+++ b/static/css/theme-diambra.css
@@ -1,31 +1,31 @@
 
 :root{
 
-    --MAIN-TEXT-color:#323232; /* Color of text by default */
-    --MAIN-TITLES-TEXT-color: #5e5e5e; /* Color of titles h2-h3-h4-h5 */
-    --MAIN-LINK-color:#911503; /* Color of links */
+    --MAIN-TEXT-color:#0b0b10; /* Color of text by default */
+    --MAIN-TITLES-TEXT-color: #5b5b60; /* Color of titles h2-h3-h4-h5 */
+    --MAIN-LINK-color:#a5101f; /* Color of links */
     --MAIN-LINK-HOVER-color:#d01616; /* Color of hovered links */
-    --MAIN-ANCHOR-color: #911503; /* color of anchors on titles */
+    --MAIN-ANCHOR-color: #a5101f; /* color of anchors on titles */
 
-    --MENU-HOME-LINK-color: #ccc; /* Color of the home button text */
-    --MENU-HOME-LINK-HOVER-color: #e6e6e6; /* Color of the hovered home button text */
+    --MENU-HOME-LINK-color: #d0d0d5; /* Color of the home button text */
+    --MENU-HOME-LINK-HOVER-color: #f0f0f5; /* Color of the hovered home button text */
 
-    --MENU-HEADER-BG-color:#000000; /* Background color of menu header */
-    --MENU-HEADER-BORDER-color:#911503; /*Color of menu header border */
+    --MENU-HEADER-BG-color:#0b0b10; /* Background color of menu header */
+    --MENU-HEADER-BORDER-color:#a5101f; /*Color of menu header border */
 
-    --MENU-SEARCH-BG-color:#911503; /* Search field background color (by default borders + icons) */
-    --MENU-SEARCH-BOX-color: #ef2020; /* Override search field border color */
+    --MENU-SEARCH-BG-color:#a5101f; /* Search field background color (by default borders + icons) */
+    --MENU-SEARCH-BOX-color: #eeaf22; /* Override search field border color */
     --MENU-SEARCH-BOX-ICONS-color: #fda1a1; /* Override search field icons color */
 
-    --MENU-SECTIONS-ACTIVE-BG-color:#202020; /* Background color of the active section and its childs */
-    --MENU-SECTIONS-BG-color:#101010; /* Background color of other sections */
-    --MENU-SECTIONS-LINK-color: #ccc; /* Color of links in menu */
-    --MENU-SECTIONS-LINK-HOVER-color: #e6e6e6;  /* Color of links in menu, when hovered */
-    --MENU-SECTION-ACTIVE-CATEGORY-color: #222; /* Color of active category text */
-    --MENU-SECTION-ACTIVE-CATEGORY-BG-color: #eeeeee; /* Color of background for the active category (only) */
+    --MENU-SECTIONS-ACTIVE-BG-color:#1b1b20; /* Background color of the active section and its childs */
+    --MENU-SECTIONS-BG-color:#0b0b10; /* Background color of other sections */
+    --MENU-SECTIONS-LINK-color: #d0d0d5; /* Color of links in menu */
+    --MENU-SECTIONS-LINK-HOVER-color: #f0f0f5;  /* Color of links in menu, when hovered */
+    --MENU-SECTION-ACTIVE-CATEGORY-color: #0b0b10; /* Color of active category text */
+    --MENU-SECTION-ACTIVE-CATEGORY-BG-color: #f0f0f5; /* Color of background for the active category (only) */
 
-    --MENU-VISITED-color: #911503; /* Color of 'page visited' icons in menu */
-    --MENU-SECTION-HR-color: #911503; /* Color of <hr> separator in menu */
+    --MENU-VISITED-color: #a5101f; /* Color of 'page visited' icons in menu */
+    --MENU-SECTION-HR-color: #eeaf22; /* Color of <hr> separator in menu */
 
 }
 
