--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -488,7 +488,7 @@ div.notices {
 div.notices p {
     padding: 15px;
     display: block;
-    font-size: 18px;
+    font-size: 1rem;
     margin-top: 0rem;
     margin-bottom: 0rem;
     color: #666;
@@ -659,7 +659,7 @@ pre code {
     border: 0;
     padding: 0;
     margin: 0;
-    font-size: 18px;
+    font-size: 15px;
 }
 hr {
     border-bottom: 4px solid #F0F2F4;
