--- a/static/css/hugo-theme.css
+++ b/static/css/hugo-theme.css
@@ -141,6 +141,7 @@ h2:hover .anchor, h3:hover .anchor, h4:hover .anchor, h5:hover .anchor, h6:hover
 h2, h3, h4, h5, h6 {
   font-weight: 400;
   line-height: 1.1;
+  clear: both;
 }
 
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
