--- a/layouts/partials/logo.html
+++ b/layouts/partials/logo.html
@@ -1,5 +1,5 @@
-<a id="logo" href='{{ (cond (and (ne .Site.Params.landingPageURL nil) (.Site.IsMultiLingual)) .Site.Params.landingPageURL "./") }}'>
+<a id="logo" href="{{ .Site.BaseURL }}">
 
-<img src="./images/logo.png">
+<img src="{{ .Site.BaseURL }}/images/logo.png">
 
 </a>
