--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -10,6 +10,7 @@
     <meta property="og:title" content="{{ .Site.Title }}">
     <meta property="og:description" content="{{ .Site.Params.description }}">
     <meta property="og:image" content="{{ .Site.BaseURL }}/images/logoMeta.png" />
-    <meta property="og:url" content="https://docs.diambra.ai/" />
+    <meta property="og:url" content="https://docs.diambra.ai" />
     <meta property="og:type" content="website">
+    <meta name="publish_date" property="og:publish_date" content="2022-01-15T00:00:00-0600">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
