Fixed diambraArena to diambra/arena

--- a/layouts/partials/menu-footer.html
+++ b/layouts/partials/menu-footer.html
@@ -1,15 +1,15 @@
 <center>
     <!-- Place this tag where you want the button to render. -->
-    <!-- <a class="github-button" href="https://github.com/diambra/diambraArena" data-icon="octicon-cloud-download" aria-label="Clone DIAMBRA Arena from GitHub">Clone</a> -->
+    <!-- <a class="github-button" href="https://github.com/diambra/arena" data-icon="octicon-cloud-download" aria-label="Clone DIAMBRA Arena from GitHub">Clone</a> -->
 
     <!-- Place this tag where you want the button to render. -->
-    <a class="github-button" href="https://github.com/diambra/diambraArena/archive/refs/heads/main.zip" data-icon="octicon-download" aria-label="Download DIAMBRA Arena from GitHub">Download</a>
+    <a class="github-button" href="https://github.com/diambra/arena/archive/refs/heads/main.zip" data-icon="octicon-download" aria-label="Download DIAMBRA Arena from GitHub">Download</a>
 
     <!-- Place this tag where you want the button to render. -->
-    <a class="github-button" href="https://github.com/diambra/diambraArena" data-icon="octicon-star" data-show-count="true" aria-label="Star DIAMBRA Arena on GitHub">Star</a>
+    <a class="github-button" href="https://github.com/diambra/arena" data-icon="octicon-star" data-show-count="true" aria-label="Star DIAMBRA Arena on GitHub">Star</a>
 
     <!-- Place this tag where you want the button to render. -->
-    <a class="github-button" href="https://github.com/diambra/diambraArena/fork" data-icon="octicon-repo-forked" data-show-count="true" aria-label="Fork DIAMBRA Arena on GitHub">Fork</a>
+    <a class="github-button" href="https://github.com/diambra/arena/fork" data-icon="octicon-repo-forked" data-show-count="true" aria-label="Fork DIAMBRA Arena on GitHub">Fork</a>
 
     <!-- <p>Built with <a href="https://github.com/matcornic/hugo-theme-learn"><i class="fas fa-heart"></i></a> from <a href="https://getgrav.org">Grav</a> and <a href="https://gohugo.io/">Hugo</a></p> -->
 </center>
