--- a/css/theme.css
+++ b/css/theme.css
@@ -1,3 +1,7 @@
+:root {
+    --SIDEBAR-width: 350px;
+}
+
 @charset "UTF-8";
 
 /* Tags */
@@ -39,7 +43,7 @@
     src: url("../fonts/Work_Sans_500.eot?#iefix") format("embedded-opentype"), url("../fonts/Work_Sans_500.woff") format("woff"), url("../fonts/Work_Sans_500.woff2") format("woff2"), url("../fonts/Work_Sans_500.svg#WorkSans") format("svg"), url("../fonts/Work_Sans_500.ttf") format("truetype");
 }
 body {
-    background: rgba(11, 11, 16, 0.10);  
+    background: rgba(11, 11, 16, 0.10);
     color: #777;
 }
 body #chapter h1 {
@@ -176,7 +180,7 @@ textarea:focus, input[type="email"]:focus, input[type="number"]:focus, input[typ
     background-color: #322A38;
     position: fixed;
     top: 0;
-    width: 300px;
+    width: var(--SIDEBAR-width);
     bottom: 0;
     left: 0;
     font-weight: 400;
@@ -324,7 +328,7 @@ textarea:focus, input[type="email"]:focus, input[type="number"]:focus, input[typ
 }
 #body {
     position: relative;
-    margin-left: 300px;
+    margin-left: var(--SIDEBAR-width);
     min-height: 100vh;
     max-width: 900px;
     background: #f0f0f5;
@@ -1020,16 +1024,16 @@ td {
 }
 @media only all and (max-width: 59.938em) {
     #sidebar {
-        width: 230px;
+        width: var(--SIDEBAR-width);
     }
     #body {
-        margin-left: 230px;
+        margin-left: var(--SIDEBAR-width);
     }
 }
 @media only all and (max-width: 47.938em) {
     #sidebar {
-        width: 230px;
-        left: -230px;
+        width: var(--SIDEBAR-width);
+        left: - var(--SIDEBAR-width);
     }
     #body {
         margin-left: 0;
@@ -1042,7 +1046,7 @@ td {
         left: 0;
     }
     .sidebar-hidden #body {
-        margin-left: 230px;
+        margin-left: var(--SIDEBAR-width);
         overflow: hidden;
     }
     .sidebar-hidden #overlay {
