Update content using new settings classes

--- a/layouts/shortcodes/github_code.html
+++ b/layouts/shortcodes/github_code.html
@@ -7,5 +7,5 @@
     {{ highlight .Content $lang }}
   {{ end }}
 {{ else }}
-  {{ errorf "Unable to get remote resource." }}
+  {{ errorf "Unable to get remote resource for file: %s" $file | safeHTML}}
 {{ end }}
